// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-link renders as disabled 1`] = `
<ld-link>
  <mock:shadow-root>
    <a aria-disabled="true" class="ld-link ld-link--disabled" disabled="" part="anchor focusable">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders default 1`] = `
<ld-link>
  <mock:shadow-root>
    <a class="ld-link" part="anchor focusable">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with chevron 1`] = `
<ld-link chevron="end" href="#">
  <mock:shadow-root>
    <a chevron="end" class="ld-link ld-link--chevron-end" href="#" part="anchor focusable">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with href 1`] = `
<ld-link href="#">
  <mock:shadow-root>
    <a class="ld-link" href="#" part="anchor focusable">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with target _blank and rel 1`] = `
<ld-link href="#" target="_blank">
  <mock:shadow-root>
    <a class="ld-link" href="#" part="anchor focusable" rel="noreferrer noopener" target="_blank">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;
